Renamed files
Fixed test